--- a/_config.yml
+++ b/_config.yml
@@ -187,6 +187,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  certificates:
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
@@ -231,6 +234,15 @@ defaults:
   - scope:
       path: ""
       type: portfolio
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: true
+    # _certificates
+  - scope:
+      path: ""
+      type: certificates
     values:
       layout: single
       author_profile: true
