--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "https://www.youtube.com/channel/UCvspJWz8eQYxNlt-CreQ13g"
+  youtube          : "UCvspJWz8eQYxNlt-CreQ13g"
   wikipedia        :
 
 
